<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.juanes.calcularnota.MainActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lab"
        android:id="@+id/lab"
        android:inputType="numberDecimal"
        android:textSize="25dp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/a1"
        android:id="@+id/a1"
        android:inputType="numberDecimal"
        android:textSize="25dp"
        android:textStyle="normal|bold" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/a2"
        android:id="@+id/a2"
        android:inputType="numberDecimal"
        android:textSize="25dp"
        android:textStyle="normal|bold" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/a3"
        android:id="@+id/a3"
        android:inputType="numberDecimal"
        android:textSize="25dp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/afinal"
        android:id="@+id/afinal"
        android:inputType="numberDecimal"
        android:textSize="25dp"
        android:textStyle="normal|bold" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nota"
        android:id="@+id/nota"
        android:text="Nota Final"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:hint="@string/Apreciasion"
        android:gravity="center"
        android:id="@+id/res"
        android:textStyle="normal|bold" />

</LinearLayout>



</LinearLayout>
